--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Nav bar</a>
+          <a class="navbar-brand" href="#">
+            <img src="/assets/logo.svg" alt="#logo">
+          </a>
           <button 
             class="navbar-toggler" 
             type="button" 
@@ -59,6 +61,24 @@
     </div>
   </div>
   <!-- END HEADER -->
+  <!-- SLIDER -->
+  <div id="slider" class="block">
+    <div class="container pt-5">
+      <div class="row">
+        <div class="col-lg-4 col-md-6 alling-self-center mb-md-0 mb-4">
+          <h1>Lorem ipsum</h1>
+          <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </h4>
+          <a href="">lorem</a>
+          <a href="">Lorem</a>
+          <div class="col-lg-8 col-md-6 alling-self-center text-center">
+            <img src="assets/destaque1.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ENDSLIDER -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
   </script>
